--- a/playpage/play.html
+++ b/playpage/play.html
@@ -12,11 +12,11 @@
             <input placeholder="NAME" type="text" id="nameInput">
             <input placeholder="AGE" type="text" id="ageInput">
             <input placeholder="SQUAD" type="text" id="squadInput">
-            <button onclick="submitDetails()">Submit</button>
+            <!-- <button onclick="submitDetails()">Submit</button> -->
         </div>
     </div>
     <div class="tigerimage">
-        <img src="assests/tiger image.png" alt="">
+        <img src="https://o.remove.bg/downloads/dd693d8b-4c58-4cd1-ac96-343f1f818aa0/cartoon-cheetah-sitting-ground-with-big-eyes-generative-ai_958098-29778-removebg-preview.png" alt="">
     </div>
     <a href="http://127.0.0.1:5500/game.html">
     <div class="playbtn">
@@ -41,7 +41,9 @@
             
     </div>
 </a>
-<a href="http://127.0.0.1:5500/playpage/instruction.html"><p class="instruction" >i</p></a>
-<script src="play.js"></script>
+<a href="http://127.0.0.1:5500/playpage/instruction.html"><p class="instruction" >i</p></a>vv
+
+  
 </body>
+<script src="play.js"></script>
 </html>
