--- a/gameover.html
+++ b/gameover.html
@@ -20,6 +20,13 @@
 
         <img src="assests/attach image.png" width="300px" alt="">
     </div>
+    <div class="LEADERBOARD">
+        <h2>Player Information</h2>
+        <p><strong>Name:</strong> <span id="nameOutput"></span></p>
+        <p><strong>Age:</strong> <span id="ageOutput"></span></p>
+        <p><strong>Squad:</strong> <span id="squadOutput"></span></p>
+    </div>
+
 </body>
 <script src="gameover.js"></script>
 
