--- a/gameover.html
+++ b/gameover.html
@@ -13,8 +13,8 @@
     </div>
     <div id="score"></div>
     <div>
-        <a href="http://127.0.0.1:5500/playpage/play.html"><button>Home</button></a><a
-            href="http://127.0.0.1:5500/game.html"><button>Replay</button></a>
+        <button class="Home">Home</button>
+           <button class="Replay">Replay</button></a>
     </div>
     <div class="cheetahattack">
 
