--- a/playpage/play.html
+++ b/playpage/play.html
@@ -14,7 +14,7 @@
         <input placeholder="NAME" type="text" id="nameInput">
         <input placeholder="AGE" type="text" id="ageInput">
         <input placeholder="SQUAD" type="text" id="squadInput">
-        <button id="saveData">Save Data</button>
+        <button id="saveData">Add</button>
     </div>
     </div>
 
