--- a/game.html
+++ b/game.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <div class="gameContainer">
-    <div class="dino"></div>
-    <div class="obstacle"></div>
+    <div class="Deer"></div>
+    <div class="Cheetah"></div>
     <div class="gameOver"></div>
     <div id="scoreCont">Your Score: 0</div>
 </div>
