--- a/gameover.html
+++ b/gameover.html
@@ -9,9 +9,9 @@
 <link rel="stylesheet" href="gameover.css">
 
 <body>
-    <div class="gamever"><img src="assests/game over.png" width="400px" alt="">
+    <div class="gamever"><img src="assests/game overs.png" width="400px" alt="">
     </div>
-    <div id="score"></div>
+    <div id="scoreDisplay"></div>
     <div>
         <button class="Home">Home</button>
            <button class="Replay">Replay</button></a>
