--- a/playpage/play.html
+++ b/playpage/play.html
@@ -20,7 +20,7 @@
 
         <div class="playbtn">
             <p>PLAY</p>
-
+            <img src="https://o.remove.bg/downloads/22c184c0-98c9-4557-b301-6886c76dbf32/1000_F_516554554_80vrzgYeQfmrn1YIcbTJ6diFdQAggjIm-removebg-preview.png" alt="">
 
         </div>
    
